--- a/configurations/config.properties
+++ b/configurations/config.properties
@@ -1,4 +1,4 @@
-url=https://www.amazon.eg/
+url=https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
 browser=edge
 implicitWait=10
 explicitWait=10
